--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     font-size: 14px;
     font-family: "JetBrainsMono Nerd Font,JetBrainsMono NF" ;
     min-height: 25px;
+    padding-left: 5px;
+    padding-right: 5px;
     color: #DAD7BE; 
 }
 
@@ -17,7 +19,7 @@ window#waybar {
 
 .modules-right {
   padding-left: 5px;
-  border-radius: 15px 0 0 15px;
+  border-radius:15px;
   margin-top: 2px;
   background: #5F3451;
 }
@@ -25,12 +27,13 @@ window#waybar {
 .modules-center {
   padding: 0 15px;
   margin-top: 2px;
-  border-radius: 15px 15px 15px 15px;
+  border-radius:15px;
   background: #5F3451;
 }
 
 .modules-left {
-  border-radius: 0 15px 15px 0;
+  padding-right: 15px;
+  border-radius:15px;
   margin-top: 2px;
   background: #5F3451;
 }
