a bunch of changes with this, including river, really nice css animations, and switch to transparent bar

--- a/style.css
+++ b/style.css
@@ -1,105 +1,130 @@
  * {
-    border: none;
-    font-size: 14px;
-    font-family: "JetBrainsMono Nerd Font,JetBrainsMono NF" ;
-    min-height: 25px;
-    padding-left: 5px;
-    padding-right: 5px;
-    color: #DAD7BE; 
-}
-
-window#waybar {
-  background: transparent;
-  margin: 5px;
+   border: none;
+   font-size: 14px;
+   font-family: "JetBrainsMono Nerd Font,JetBrainsMono NF";
+   min-height: 25px;
+   padding-left: 5px;
+   padding-right: 5px;
+   color: #DAD7BE;
  }
 
-#custom-logo {
-  padding: 0 10px;
-}
+ window#waybar {
+   background: transparent;
+   margin: 5px;
+ }
 
-.modules-right {
-  padding-left: 5px;
-  border-radius:15px;
-  margin-top: 2px;
-  background: #5F3451;
-}
+ #custom-logo {
+   padding: 0 10px;
+ }
 
-.modules-center {
-  padding: 0 15px;
-  margin-top: 2px;
-  border-radius:15px;
-  background: #5F3451;
-}
+ .modules-right {
+   padding-left: 5px;
+   border-radius: 30px;
+   margin-top: 2px;
+   background: rgba(30, 30, 30, 0.8);
+ }
 
-.modules-left {
-  padding-right: 15px;
-  border-radius:15px;
-  margin-top: 2px;
-  background: #5F3451;
-}
+ .modules-center {
+   padding: 3px 15px;
+   margin-top: 2px;
+   border-radius: 30px;
+   background: rgba(30, 30, 30, 0.8);
+ }
 
-#battery,
-#custom-clipboard,
-#custom-colorpicker,
-#custom-powerDraw,
-#bluetooth,
-#pulseaudio,
-#network,
-#disk,
-#memory,
-#backlight,
-#cpu,
-#temperature,
-#custom-weather,
-#idle_inhibitor,
-#jack,
-#tray,
-#window,
-#workspaces,
-#clock {
-  padding: 0 5px;
-}
-#pulseaudio {
-  padding-top: 3px;
-}
+ .modules-left {
+   padding-right: 15px;
+   border-radius: 30px;
+   margin-top: 2px;
+   background: rgba(30, 30, 30, 0.8);
+ }
 
-#temperature.critical,
-#pulseaudio.muted {
-  color: #FF0000;
-  padding-top: 0;
-}
+ #battery,
+ #custom-clipboard,
+ #custom-colorpicker,
+ #custom-powerDraw,
+ #bluetooth,
+ #pulseaudio,
+ #network,
+ #disk,
+ #memory,
+ #backlight,
+ #cpu,
+ #temperature,
+ #custom-weather,
+ #idle_inhibitor,
+ #jack,
+ #tray,
+ #window,
+ #workspaces,
+ #clock {
+   padding: 0 5px;
+ }
 
+ #tags button {
+   padding: 0px 5px;
+   margin: 4px 3px;
+   border-radius: 15px;
+   border: 0px;
+   background: rgba(60, 100, 125, 0.2);
+   transition: all 0.3s ease-in-out;
+ }
 
+ #pulseaudio {
+   padding-top: 3px;
+ }
 
-
-#clock{
-  color: #AB9A79;
-}
-
-#battery.charging {
-    color: #ffffff;
-    background-color: #26A65B;
-}
-
-#battery.warning:not(.charging) {
-    background-color: #ffbe61;
-    color: black;
-}
-
-#battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
+ #temperature.critical,
+ #pulseaudio.muted {
+   color: #FF0000;
+   padding-top: 0;
+ }
 
 
-@keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
-}
+ #tags button.occupied {
+   background: rgba(100, 60, 125, 0.3);
+   padding: 0px 5px;
+   margin: 4px 3px;
+   border-radius: 15px;
+   border: 0px;
+
+
+ }
+
+ #tags button.focused {
+   background: rgba(200, 120, 250, 1);
+   border-radius: 15px;
+   min-width: 40px;
+   transition: all 0.3s ease-in-out;
+ }
+
+ #clock {
+   color: #AB9A79;
+ }
+
+ #battery.charging {
+   color: #ffffff;
+   background-color: #26A65B;
+ }
+
+ #battery.warning:not(.charging) {
+   background-color: #ffbe61;
+   color: black;
+ }
+
+ #battery.critical:not(.charging) {
+   background-color: #f53c3c;
+   color: #ffffff;
+   animation-name: blink;
+   animation-duration: 0.5s;
+   animation-timing-function: linear;
+   animation-iteration-count: infinite;
+   animation-direction: alternate;
+ }
+
+
+ @keyframes blink {
+   to {
+     background-color: #ffffff;
+     color: #000000;
+   }
+ }
